<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/main_bg_gradient"
  tools:context=".ui.MainActivity">


  <Button
    android:id="@+id/button"
    style="@style/MainButtonsStyle"
    android:layout_marginTop="8dp"
    android:text="@string/toolbar_example"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/ramotion_logo" />

  <Button
    android:id="@+id/button2"
    style="@style/MainButtonsStyle"
    android:text="@string/garland_view_example"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button" />

  <Button
    android:id="@+id/button3"
    style="@style/MainButtonsStyle"
    android:text="@string/card_slider_example"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button2" />

  <Button
    android:id="@+id/button4"
    style="@style/MainButtonsStyle"
    android:text="@string/expading_collection_example"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button3" />

  <Button
    android:id="@+id/button5"
    style="@style/MainButtonsStyle"
    android:text="@string/direct_select_example"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button4" />

  <Button
    android:id="@+id/button6"
    style="@style/MainButtonsStyle"
    android:text="@string/fluid_slider_example"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button5" />

  <Button
    android:id="@+id/button7"
    style="@style/MainButtonsStyle"
    android:text="@string/folding_cell_example"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button6" />

  <ImageView
    android:id="@+id/ramotion_logo"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:scaleType="centerCrop"
    android:src="@drawable/ramotion_logo"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/ramotion_header"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:text="@string/ramotion_libraries_example_app"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    android:textColor="@android:color/white"
    app:layout_constraintBottom_toTopOf="@+id/button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/ramotion_logo"
    app:layout_constraintTop_toTopOf="parent" />

  <Switch
    android:id="@+id/show_onboarding"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="16dp"
    android:switchPadding="10dp"
    android:text="@string/show_onboarding_at_start"
    android:textColor="@android:color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>